test/functions/jplevyak/zeroarity-bound-error-2.good
error: '_tmp' has no type
zeroarity-bound-error-2.chpl:9: illegal call argument type 'stdout' illegal: ( file ) 
zeroarity-bound-error-2.chpl:9: illegal call argument type '_tmp' illegal: ( ) 
zeroarity-bound-error-2.chpl:9: unresolved call 'fwrite'
note: candidates are:
_chpl_complex.chpl:8: fwrite, f : file, x : complex
_chpl_file.chpl:112: fwrite, f : file, val : int64
_chpl_file.chpl:145: fwrite, f : file, val : float64
_chpl_file.chpl:165: fwrite, f : file, val : string
_chpl_file.chpl:196: fwrite, f : file, val : bool
_chpl_file.chpl:214: fwrite, f : file, x : nil_type
_chpl_htuple.chpl:22: fwrite, f : file, val : _htuple
_chpl_adomain.chpl:74: fwrite, f : file, x : _adomain
_chpl_adomain.chpl:143: fwrite, f : file, x : _aarray
_chpl_data.chpl:46: fwrite, f : file, val : _fdata
_chpl_seq.chpl:157: fwrite, f : file, s : seq
_chpl_seq.chpl:236: fwrite, f : file, s : _aseq
fwrite, f : file, val : _tuple2
prelude.chpl:3: fwrite, f : file, val : object
prelude.chpl:4: fwrite, f : file, val : value
prelude.chpl:5: fwrite, f : file, val : closure
prelude.chpl:13: fwrite, f : file, val : _ddata
prelude.chpl:33: fwrite, f : file, val : CFILEPTR
prelude.chpl:140: fwrite, f : file, val : reduction
prelude.chpl:143: fwrite, f : file, val : sum
prelude.chpl:146: fwrite, f : file, val : max
prelude.chpl:149: fwrite, f : file, val : min
prelude.chpl:152: fwrite, f : file, val : maxloc
prelude.chpl:155: fwrite, f : file, val : minloc
prelude.chpl:161: fwrite, f : file, val : timer
prelude.chpl:211: fwrite, f : file, val : _methodTokenType
prelude.chpl:214: fwrite, f : file, val : _setterTokenType
prelude.chpl:217: fwrite, f : file, val : _seq
prelude.chpl:220: fwrite, f : file, val : Array
prelude.chpl:242: fwrite, f : file, val : Domain
prelude.chpl:245: fwrite, f : file, val : Tuple
_chpl_file.chpl:1: fwrite, f : file, val : file
_chpl_adomain.chpl:86: fwrite, f : file, val : _aarray_info
_chpl_seq.chpl:1: fwrite, f : file, val : _seqNode
zeroarity-bound-error-2.chpl:1: fwrite, f : file, val : C
fwrite, f : file, val : _tuple2
zeroarity-bound-error-2.chpl:9: illegal call argument type expression illegal: ( int64 ) 
zeroarity-bound-error-2.chpl:9: expression has no type
zeroarity-bound-error-2.chpl:9: expression has no type
fail: program does not type
